--- a/pages/game.html
+++ b/pages/game.html
@@ -4,9 +4,101 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/styles/gameStyles.css" />
     <title>Galaxian</title>
 </head>
 <body>
-    
+    <header>
+        <p id="score">
+          score 
+        </p>
+        <span id="score-value">0000</span>
+        <p id="high-score">
+          high score
+        </p>
+        <span id="high-score-value">0000</span>
+        <p id="lives">
+          lives
+        </p>
+        <span id="lives-value">3</span>
+      </header>
+      <section class="start-game">
+        <div class="ready">
+          <span class="word-1">Are</span> 
+          <span class="word-2">you</span> 
+          <span class="word-3">ready?</span>
+        </div>
+      </section>
+      <main>
+        <section class="formation">
+          <div id="ship1" class="enemy-ship red">
+            <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
+          </div>
+          <div id="ship2" class="enemy-ship red">
+            <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
+          </div>
+          <div id="ship3" class="enemy-ship red">
+            <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
+          </div>
+          <div id="ship4" class="enemy-ship red">
+            <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
+          </div>
+          <div id="ship5" class="enemy-ship red">
+            <img src="/assets/alien-rojo.svg"  name="red" alt="Enemy Ship" />
+          </div>
+          <div id="ship6" class="enemy-ship red">
+            <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
+          </div>
+          <div id="ship7" class="enemy-ship yellow">
+            <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship8" class="enemy-ship yellow">
+            <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship9" class="enemy-ship yellow">
+            <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship10" class="enemy-ship yellow">
+            <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship11" class="enemy-ship yellow">
+            <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship12" class="enemy-ship yellow">
+            <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship13" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship14" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship15" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship16" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship17" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
+          </div>
+          <div id="ship18" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
+          </div>
+        </section>
+        <section class="space-ship">
+          <div id="my-ship" >
+            <img name="ship" src="/image/nave.svg" alt="My Ship" />
+          </div>
+        </section>
+        <section class="container">
+          <div class="wrapper"> 
+            <button id="left">left</button>
+            <button id="fire">fire</button>
+            <button id="right">right</button>
+          </div>
+        </section>
+      </main>
+      <script src="/scripts/game.js"></script>
 </body>
 </html>
