--- a/pages/game.html
+++ b/pages/game.html
@@ -1,36 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/styles/gameStyles.css" />
     <title>Galaxian</title>
-</head>
-<body>
+  </head>
+  <body>
+    <audio src="/assets/cosmos1.mp3" autoplay once></audio>
     <header>
-        <p id="score">
-          score 
-        </p>
-        <span id="score-value">0000</span>
-        <p id="high-score">
-          high score
-        </p>
-        <span id="high-score-value">0000</span>
-        <p id="lives">
-          lives
-        </p>
-        <span id="lives-value">3</span>
-      </header>
-      <section class="start-game">
-        <div class="ready">
-          <span class="word-1">Are</span> 
-          <span class="word-2">you</span> 
-          <span class="word-3">ready?</span>
-        </div>
-      </section>
-      <main>
-        <section class="formation">
+      <p id="score">score</p>
+      <span id="score-value">0000</span>
+      <p id="high-score">high score</p>
+      <span id="high-score-value">0000</span>
+      <p id="lives">lives</p>
+      <span id="lives-value">3</span>
+    </header>
+    <section class="start-game">
+      <div class="ready">
+        <span class="word-1">Are</span>
+        <span class="word-2">you</span>
+        <span class="word-3">ready?</span>
+      </div>
+    </section>
+    <main>
+      <section class="formation">
+        <div class="higher-level">
           <div id="ship1" class="enemy-ship red">
             <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
           </div>
@@ -44,11 +40,13 @@
             <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
           </div>
           <div id="ship5" class="enemy-ship red">
-            <img src="/assets/alien-rojo.svg"  name="red" alt="Enemy Ship" />
+            <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
           </div>
           <div id="ship6" class="enemy-ship red">
             <img src="/assets/alien-rojo.svg" name="red" alt="Enemy Ship" />
           </div>
+        </div>
+        <div class="medium-level">
           <div id="ship7" class="enemy-ship yellow">
             <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
           </div>
@@ -67,9 +65,11 @@
           <div id="ship12" class="enemy-ship yellow">
             <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
           </div>
-          <div id="ship13" class="enemy-ship blue">
-            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
+          <div id="ship13" class="enemy-ship yellow">
+            <img src="/assets/alien-amarillo.svg" alt="Enemy Ship" />
           </div>
+        </div>
+        <div class="ease-level-blue">
           <div id="ship14" class="enemy-ship blue">
             <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
           </div>
@@ -85,20 +85,47 @@
           <div id="ship18" class="enemy-ship blue">
             <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
           </div>
-        </section>
-        <section class="space-ship">
-          <div id="my-ship" >
-            <img name="ship" src="/image/nave.svg" alt="My Ship" />
+          <div id="ship19" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
           </div>
-        </section>
-        <section class="container">
-          <div class="wrapper"> 
-            <button id="left">left</button>
-            <button id="fire">fire</button>
-            <button id="right">right</button>
+          <div id="ship20" class="enemy-ship blue">
+            <img src="/assets/alien-azul.svg" alt="Enemy Ship" />
           </div>
-        </section>
-      </main>
-      <script src="/scripts/game.js"></script>
-</body>
+        </div>
+        <div class="ease-level-green">
+          <div id="ship21" class="enemy-ship green">
+            <img src="/assets/alien-verde.svg" alt="Enemy Ship">
+          </div>
+          <div id="ship22" class="enemy-ship green">
+            <img src="/assets/alien-verde.svg" alt="Enemy Ship">
+          </div>
+          <div id="ship23" class="enemy-ship green">
+            <img src="/assets/alien-verde.svg" alt="Enemy Ship">
+          </div>
+          <div id="ship24" class="enemy-ship green">
+            <img src="/assets/alien-verde.svg" alt="Enemy Ship">
+          </div>
+          <div id="ship25" class="enemy-ship green">
+            <img src="/assets/alien-verde.svg" alt="Enemy Ship">
+          </div>
+          <div id="ship26" class="enemy-ship green">
+            <img src="/assets/alien-verde.svg" alt="Enemy Ship"></div>
+        </div>
+      </section>
+      <audio id="collisionSound" src="/assets/collision.mp3"></audio>
+      <section class="space-ship">
+        <div id="my-ship">
+          <img name="ship" src="/assets/nave.svg" alt="My Ship" />
+        </div>
+      </section>
+      <section class="container">
+        <div class="wrapper">
+          <button id="left">left</button>
+          <button id="fire">fire</button>
+          <button id="right">right</button>
+        </div>
+      </section>
+    </main>
+    <script src="/scripts/game.js"></script>
+  </body>
 </html>
