add about-us page, changes on landing and images

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -11,6 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/landingStyles.css" />
+    <link rel="" href="/index.html">
     <title>Welcome to The Galaxian</title>
   </head>
   <body>
@@ -56,18 +57,23 @@
     </dialog>
 
     <footer>
+      <section class="about-us">
+        <a href="/pages/about-us.html">
+          <p>ABOUT US</p>
+        </a>
+      </section>
       <section class="members">
         <div class="member">
           <p class="members-name">Antonela Ledesma</p>
           <div class="social-icons">
-            <a href="">
+            <a href="https://www.linkedin.com/in/antonela-ledesma/">
               <img
                 class="members-logo"
                 src="../assets/icon-linkedin.svg"
                 alt="logo-linkedin"
               />
             </a>
-            <a href="https://github.com/NicolasMRuiz">
+            <a href="https://github.com/AntonelaLedesma7">
               <img
                 class="members-logo"
                 src="../assets/icon-github.svg"
@@ -79,7 +85,7 @@
         <div class="member">
           <p class="members-name">Nicolás Ruiz</p>
           <div class="social-icons">
-            <a href="">
+            <a href="https://www.linkedin.com/in/nicolasmaxiruiz/">
               <img
                 class="members-logo"
                 src="/assets/icon-linkedin.svg"
@@ -98,14 +104,14 @@
         <div class="member">
           <p class="members-name">Martina Vargas</p>
           <div class="social-icons">
-            <a href="">
+            <a href="https://www.linkedin.com/in/martina-vargass/">
               <img
                 class="members-logo"
                 src="/assets/icon-linkedin.svg"
                 alt="logo-linkedin"
               />
             </a>
-            <a href="https://github.com/NicolasMRuiz">
+            <a href="https://github.com/martinavargas">
               <img
                 class="members-logo"
                 src="/assets/icon-github.svg"
