add about us page, changes on landing and images

--- a/pages/landing.html
+++ b/pages/landing.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="../styles/landingStyles.css" />
-    <link rel="" href="/index.html">
+    <link rel="" href="/index.html" />
     <title>Welcome to The Galaxian</title>
   </head>
   <body>
